force-app/main/default/objects/Sales_Order_Inflation__c/Sales_Order_Inflation__c.object-meta.xml
<CustomObject>
    <label>Sales Order Inflation</label>
    <nameField>
        <label>Inflation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Inflation Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>