force-app/main/default/objects/Sales_Order_Inflation__c/fields/CNG_Inflation__c.field-meta.xml
<CustomField>
    <fullName>CNG_Inflation__c</fullName>
    <label>CNG Inflation</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>