force-app/main/default/objects/Sales_Order_Inflation__c/fields/Electric_inflation__c.field-meta.xml
<CustomField>
    <fullName>Electric_inflation__c</fullName>
    <label>Electric inflation</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>