force-app/main/default/objects/Sales_Order_Inflation__c/fields/Hybrid_Inflation__c.field-meta.xml
<CustomField>
    <fullName>Hybrid_Inflation__c</fullName>
    <label>Hybrid Inflation</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>