force-app/main/default/objects/Sales_Order_Inflation__c/fields/Margin_Assumption__c.field-meta.xml
<CustomField>
    <fullName>Margin_Assumption__c</fullName>
    <label>Margin Assumption</label>
    <referenceTo>Margin_Assumption__c</referenceTo>
    <relationshipLabel>Sales Order Inflation Rates</relationshipLabel>
    <relationshipName>Sales_Order_Inflation_Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>