force-app/main/default/objects/Sales_Order_Inflation__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <label>Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Sales Order Inflation Rates</relationshipLabel>
    <relationshipName>Sales_Order_Inflation_Rates</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>