force-app/main/default/objects/Sales_Order_Inflation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Margin_Assumption__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>CNG_Inflation__c</columns>
    <columns>Diesel_Inflation__c</columns>
    <columns>Electric_inflation__c</columns>
    <columns>Hybrid_Inflation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>